# turbine

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  start.sh
backend/app/: main.py
backend/app/db/: database.py  initialize_db.py
backend/app/models/: api.py  database.py
backend/app/services/: data_loader.py  json_placeholder.py  turbine.py
env_example/: backend.env  mongo.env
frontend/: .dockerignore  Dockerfile  build.css  package.json  pnpm-lock.yaml
frontend/src/: FAKE_DATA.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: line.tsx  sidebar.tsx  turbine-date-range-picker.tsx
frontend/src/components/ui/date-time-picker/: calendar.tsx  date-field.tsx  date-segment.tsx  date-time-picker.tsx  time-field.tsx
frontend/src/lib/: chartData.ts  fetchTurbineData.ts  utils.ts
