[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Takahiro Mitsui <takahiro.mitsui@code.berlin>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = {version = "3.11", extras = ["srv"]}
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pydantic = "^2.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
